--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,42 @@
 h1, p {
   font-family: Lato;
 }
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.row{
+  background: white;
+  border-radius: 30px;
+  box-shadow: 12px 12px 22px;
+}
+.login img{
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px
+}
+.inp {
+  height: 50px;
+  width: 70%;
+  border: none;
+  outline: none;
+  border-radius: 60px;
+  box-shadow: -1px 1px 30px -11px rgba(0,0,0,0.75);
+  
+}
+.btn1{
+  height: 50px;
+  width: 50%;
+  border: none;
+  outline: none;
+  border-radius: 60px;
+  font-weight: 600;
+  background: skyblue;
+}
+.img-fluid {
+  background-image: url('https://scontent.fjnb1-1.fna.fbcdn.net/v/t1.6435-9/p180x540/221416672_4359414714115016_4589805908274039668_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=730e14&_nc_eui2=AeG_K15tqUvmV-6HEmkzTHM2QLOPcot1b9xAs49yi3Vv3Cy1D_AWTw0i9-5kE8jUzkV1kHA4yoULySMtqKoaflft&_nc_ohc=rjJzr0uQBhIAX8Ycxzm&_nc_ht=scontent.fjnb1-1.fna&oh=30c6be4f617be0ea4b2dccb14557d34a&oe=61308AFE');
+  height:510px; 
+  width:500px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
