--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ blockquote:after,
 q:before,
 q:after {
   content: "";
-  content: none;
+ 
 }
 table {
   border-collapse: collapse;
@@ -194,7 +194,7 @@ img {
 /*-- Index-Page-Styling --*/
 
 body {
-  background: url("./images/background.jpg");
+  background: url("");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -235,7 +235,7 @@ h1 {
   width: 60%;
   height: 100%;
   float: left;
-  background: url("./images/city.jpg");
+  background: url("");
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
